#11 - fix: usercard__info overflow

--- a/src/components/ProfileMessage/ProfileMessage.css
+++ b/src/components/ProfileMessage/ProfileMessage.css
@@ -13,6 +13,7 @@
 
 .message__avatar img {
   width: 3em;
+  height: 3em;
   aspect-ratio: 1/1;
   object-fit: cover;
   object-position: center;
